--- a/LaTeX_diplomaterv/chapter2.tex
+++ b/LaTeX_diplomaterv/chapter2.tex
@@ -133,6 +133,7 @@ Ellenpélda a vizuális nyelv, amit implementáltam, az állapotgép: ebben az e
 
 \section{Összefoglalás}
 
+A prototipizálás során arra jutottam, hogy a rendszernek a két aspektusa --  kollaboratív szerkesztés és vizuális nyelv fejlesztése -- közül nagyobb hangsúlyt szeretnék fektetni az elsőre, emiatt egy egyszerű nyelvet fogok megvalósítani: az állapotgép vizuális nyelvét, viszont a webalkalmazást úgy építem fel, hogy a vizuális nyelv jellege is felhasználó által legyen meghatározható. Ha akarjuk, akkor az abszrakcióban egy szinttel feljebb céloztam: vizuális nyelveket szerkesztő alkalmazás. 
 
-
+A végső kimenet egy példányosítható osztály, ami egy programot valósít meg, ez a program vizuálisan szerkeszthető, viszont a programozási nyelv változtatható a transzformációs szabályok módosítása által.
 
