--- a/LaTeX_diplomaterv/mybib.bib
+++ b/LaTeX_diplomaterv/mybib.bib
@@ -15,12 +15,16 @@
 }
 
 
-@BOOK{nodebook,
-  author="Guillermo Rauch",
-  title="Smashing Node.JS",
-  publisher="Wiley",
-  year=2012
+@book{nodebook,
+  title={Smashing Node.js: JavaScript Everywhere},
+  author={Rauch, G.},
+  isbn={9781119963103},
+  series={Smashing Magazine Book Series},
+  url={http://books.google.hu/books?id=G1y\_5kpmatUC},
+  year={2012},
+  publisher={Wiley}
 }
+
 
 @misc{AngularDocConcepts,
   author= "angularjs.org",
@@ -77,3 +81,53 @@
   note = {Accessed: 2013-11-15}
 }
 
+@misc{mdnprotoref,
+  author= "Mozilla",
+  title = {Inheritance and the prototype chain},
+  year = 2013,
+  howpublished = {\url{https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Inheritance_and_the_prototype_chain}},
+  note = {Accessed: 2013-11-15}
+}
+
+@misc{coffeeref,
+  author= "Jeremy Ashkenas",
+  title = {List of languages that compile to JS},
+  year = 2013,
+  howpublished = {\url{https://github.com/jashkenas/coffee-script/wiki/List-of-languages-that-compile-to-JS}},
+  note = {Accessed: 2013-11-15}
+}
+
+
+@misc{acidref,
+  author= "Giorgio Sironi",
+  title = {How ACID is MongoDB?},
+  year = 2013,
+  howpublished = {\url{http://css.dzone.com/articles/how-acid-mongodb}},
+  note = {Accessed: 2013-11-15}
+}
+
+@article{maccaw2011,
+  added-at = {2011-12-16T13:33:25.000+0100},
+  author = {MacCaw, Alex},
+  biburl = {http://www.bibsonomy.org/bibtex/2351ab8bd455f5eb542cff7557ddb4ed0/maxirichter},
+  interhash = {b110f488f31d35763a0c2e759ecfeb81},
+  intrahash = {351ab8bd455f5eb542cff7557ddb4ed0},
+  keywords = {coffeescript javascript webdevelopment},
+  timestamp = {2011-12-16T13:33:25.000+0100},
+  title = {The Little Book on CoffeeScript},
+  url = {http://arcturo.github.com/library/coffeescript/index.html},
+  year = 2011
+}
+
+
+
+@misc{rfc6455,
+  author="I. Fette and A. Melnikov",
+  title="{The WebSocket Protocol}",
+  series="Request for Comments",
+  number="6455",
+  howpublished="RFC 6455 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2011
+}
