--- a/LaTeX_diplomaterv/src/angular.tex
+++ b/LaTeX_diplomaterv/src/angular.tex
@@ -2,18 +2,21 @@
 \section{AngularJS}
 %----------------------------------------------------------------------------
 
+
+
+
 Az AngularJS egy nyílt forrású JavaScript keretrendszer ami ``single-page''\footnote{Egy olyan webalkalmazás ami egy weboldalon kifér dinamikusan betöltött tartalommal a jobb felhasználói élmény céljából.} webalkalmazások fejlesztését támogatja. A Google karbantartása alatt van és az első verziója 2009-ben jelent meg. 
 
 \subsection{Kliensoldali HTML generálás}
 
-\begin{figure}[!ht]
-\centering
-\includegraphics[width=10cm,keepaspectratio]{figures/concepts-startup.png}
-\caption{figure}
-\label{fig:angularhtml}
-\end{figure}
+%\begin{figure}[!ht]
+%\centering
+%\includegraphics[width=10cm,keepaspectratio]{figures/concepts-startup.png}
+%%\caption{Dinamikus kliensoldali HTML AngularJS-ben}
+%\label{fig:angularhtml}
+%\end{figure}
 
-A hagyományos weboldal esetében a böngészőben megjelenített HTML a szerver oldali alkalmazás által van létrehozva.  A single-page alkalmazás ebben az esetben úgy jön létre, hogy AJAX felhasználásával betöltés után töltődnek be újabb részei az oldalnak\cite{angularbook}. AngularJS esetében ez a művelet a kliens oldalra kerül így a szerver inkább egy adatforrás és statikus tartalom szolgáltatóvá válik. Így lazább csatolást érünk el a szerver és kliens oldal között esetleg párhuzamosítva a fejlesztést és növelve az újrafelhasználhatóságot.\cite{AngularDocConcepts}
+A hagyományos weboldal esetében a böngészőben megjelenített HTML a szerver oldali alkalmazás által van létrehozva.  A single-page alkalmazás ebben az esetben úgy jön létre, hogy AJAX felhasználásával betöltés után töltődnek be újabb részei az oldalnak\cite{angularbook}. AngularJS esetében ez a művelet a kliens oldalra kerül így a szerver inkább egy adatforrás és statikus tartalom szolgáltatóvá válik. Így lazább csatolást érünk el a szerver és kliens oldal között esetleg párhuzamosítva a fejlesztést és növelve az újrafelhasználhatóságot\cite{AngularDocConcepts}.
 
 
 
@@ -32,9 +35,14 @@ Az AngularJS fordító segítségével ki lehet terjeszteni a HTML szintaxist ú
 </ul>
 \end{lstlisting}
 
-\subsection{Model View Controller}
+Magas szintről nézve a direktívák megjelölik a DOM elemeket és ennek hatására az AngularJS fordító speciális viselkedéssel bővíti ki ezeket az elemeket. A DOM-ot csak direktívák segítségével lehet befolyásolni AngularJS-ben és ez a szeparáció segít a tesztelésben. 
 
-Az MVC architektúra a desktop alkalmazások világában lett népszerű és csak az utóbbi években terjedt a webes alkalmazások világába. Az alap ötlet a tiszta elválasztása az adat kezelésnek (modell), az üzleti logikának (kontroller) és a megjelenítésnek (nézet). Angular alkalmazásokban a nézet a Document Object Model, a kontrollerek Javascript objektumok vagy függvények, és további objektum attribútumokban van tárolva a model.  
+Beépített direktívák vannak, példáúl \lstinline{ng-repeat}, \lstinline{ng-click}, \lstinline{ng-show}, és ezek kiterjeszthetőek saját direktívákkal. Ekkor meg lehet határozni egy HTML templatet a direktívának, ami helyettesíti a DOM-ban a létező elemet az új template-tel és a direktíva \lstinline{link} attribútuma egy olyan függvény ami beállítja fordításkor a kiterjesztett viselkedést példáúl egy jQuery dátumkiválasztót kapcsol a DOM elemhez és ennek eseményeit hozzáköti a modellhez.
+
+
+\subsection{Model-View-Controller}
+
+Az MVC architektúra a desktop alkalmazások világában lett népszerű és csak az utóbbi években terjedt a webes alkalmazások világába. Az alap ötlet a tiszta elválasztása az adat kezelésnek (modell), az üzleti logikának (kontroller) és a megjelenítésnek (nézet). AngularJS alkalmazásokban a nézet a Document Object Model, a kontrollerek Javascript objektumok vagy függvények, és további objektum attribútumokban van tárolva a model.   
 
 \subsubsection{Adatkötés}
 
@@ -54,8 +62,7 @@ Ekkor az input mező módosítása automatikusan a model-t is frissíti és ez a
 
 Függőséginjektálás egy szoftver tervezési minta amiben beégetett függőségek helyett kicserélhető komponenseket használunk amiket akár futás időben is cserélhetünk. 
 
-\pdfcomment[icon=Note]{http://www.jot.fm/contents/issue_2012_04/article3.html}
-Ez egység tesztelés esetében válik hasznossá, hiszen jobban lehet izolálni alkalmazás logikát azzal, hogy függőségeket kicserélünk a tesztekben egy úgynevezett ``mocked'' függőséggel. Egy jó példa olyan függőségre amit teszt esetekben ki szeretnénk cserélni egy olyan kódrészlet ami egy különálló rendszernek az API-ját használja ráadásul állapotmódosítással járuló módon. 
+Ez egység tesztelés esetében válik hasznossá, hiszen jobban lehet izolálni alkalmazás logikát azzal, hogy függőségeket kicserélünk a tesztekben egy úgynevezett ``mocked'' függőséggel. Egy jó példa olyan függőségre amit teszt esetekben ki szeretnénk cserélni egy olyan kódrészlet ami egy különálló rendszernek az API-ját használja ráadásul állapotmódosítással járuló módon, amikor ezt ``mock-oljuk'', akkor tesztelni tudjuk az API felhasználását az API meghívása nélkül.
 
 Egy kontroller a DOM -- vagy a nézet -- egy bizonyos részéhez van kötve, és függőséginjektálás során egy úgynevezett scope kontextus objektumhoz fér hozzá amin keresztül a modellhez férünk hozzá. Ez az elválasztás segít az újrafelhasználásban és karbantarthatóságban, mert, minden kontroller csak azt lát amit kell, hogy lásson és nem ``szennyezzük'' a globális környezetet. 
 
@@ -68,3 +75,9 @@ function HelloController($scope) {
 \end{lstlisting}
 
 \subsection{Szolgáltatások}
+
+Az AngularJS szolgáltatások egyke példányok, amik bizonyos funkciót valósítanak meg az alkalmazásban, példáúl a \lstinline{http} szolgáltatás egy csomagoló a böngésző XMLHttpRequest objektuma körül és vele lehet AJAX hívásokat végrehajtani. 
+
+AngularJS szolgáltatásokat injektálni kell, mint minden más függőséget, egy komponensbe, példáúl tudunk injektálni kontrollerbe, direktívába, szolgáltatásba stb. Természetesen saját szolgáltatást is lehet fejleszteni és ajánlott is az újrafelhasználandó logikát egy ilyen szolgáltatásba helyezni.
+
+A kontrollerekbe mindig injektálni kell a \lstinline{scope} szolgáltatást, így megvalósul a kapcsolat a modell és a kontroller között.
