--- a/LaTeX_diplomaterv/appendices.tex
+++ b/LaTeX_diplomaterv/appendices.tex
@@ -13,6 +13,31 @@
 \section{Az alkalmazás telepítése}
 %----------------------------------------------------------------------------
 
+Az alkalmazás telepítése példáúl egy Ubuntu Linux rendszeren:
+
+\begin{enumerate}
+\item MongoDB adatbázis telepítése a \url{http://docs.mongodb.org/manual/tutorial/install-mongodb-on-ubuntu/} útmutató alapján:
+\begin{enumerate}
+\item \lstinline{sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10}
+\item \lstinline{echo 'deb http://downloads-distro.mongodb.org/repo/ubuntu-upstart dist 10gen' | sudo tee /etc/apt/sources.list.d/mongodb.list}
+\item \lstinline{sudo apt-get update}
+\item \lstinline{sudo apt-get install mongodb-10gen}
+\item \lstinline{sudo service mongodb start}
+\end{enumerate}
+
+\item A NodeJs környezet telepítése: \lstinline{sudo apt-get install nodejs}
+\item Az alkalmazás telepítése:
+\begin{enumerate}
+\item \lstinline{git clone git@github.com:chiller/mint.git}
+\item \lstinline{cd mint/}
+\item \lstinline{npm install}
+\item 
+\end{enumerate}
+\end{enumerate}
+
+\clearpage\section{Az alkalmazás bemutatása}
+
+public url
 
 %----------------------------------------------------------------------------
 \clearpage\section{Az állapotgép kód generálása}
