--- a/LaTeX_diplomaterv/introduction.tex
+++ b/LaTeX_diplomaterv/introduction.tex
@@ -26,5 +26,8 @@ A fejezetek felépítése a következő:
 \item a második fejezet létező webes diagramszerkesztő, webes programfejlesztő és vizuális programozási nyelveket vizsgál,
 \item a harmadik fejezet a kiválasztott technológiákat mutatja be,
 \item a negyedik fejezet az elkészült alkalmazás felépítését részletezi mind a szerveroldal és kliensoldali funkciókra kitérve,
-\item az ötödik fejezet az alkalmazás teljesítményelemzését mutatja be.
+\item az ötödik fejezet az alkalmazás teljesítményelemzését mutatja be,
+\item az első függelék az alkalmazás telepítését mutatja be Linux rendszeren,
+\item a második függelék az alkalmazás felhasználói felületét mutatja be,
+\item a harmadik függelék az állapotgép nyelv kódját részletezi.
 \end{enumerate}
